# rust_bootcamp

./: .gitignore
02-variables/src/: main.rs
03-data_types/src/: main.rs
04-constants_statics/src/: main.rs
05-functions/src/: main.rs
06-control_flow/src/: main.rs
07-ownership/src/: main.rs
08-borrowing/src/: main.rs
09-slices/src/: main.rs
10-string_masterclass/: Cargo.toml
10-string_masterclass/src/: main.rs
11-structs/src/: main.rs
12-tuples/src/: main.rs
13-enums/src/: main.rs
14-option_and_result/src/: main.rs
15-vectors/src/: main.rs
16-modules/: Cargo.toml
16-modules/src/: auth_utils.rs  database.rs  lib.rs  main.rs
17a-cargo-features/: Cargo.toml
17a-cargo-features/src/: lib.rs
17b-cargo-features/: Cargo.toml
17b-cargo-features/src/: main.rs
18-cargo-workspace/: Cargo.toml
18-cargo-workspace/cargo_workspace_api/: Cargo.toml
18-cargo-workspace/cargo_workspace_api/src/: main.rs
18-cargo-workspace/cargo_workspace_shared/: Cargo.toml
18-cargo-workspace/cargo_workspace_web/: Cargo.toml
18-cargo-workspace/cargo_workspace_web/src/: main.rs
19-project_tests/: Cargo.toml
19-project_tests/src/: lib.rs
19-project_tests/tests/: savings_account.rs
20-benchmark_tests/: Cargo.toml
20-benchmark_tests/benches/: sorting_benchmark.rs
20-benchmark_tests/src/: lib.rs
21-generics/src/: main.rs
22-traits_and_trait_bounds.rs/: Cargo.toml
22-traits_and_trait_bounds.rs/src/: main.rs
23-deriving_traits/src/: main.rs
24-orphan_rule/src/: main.rs
25-lifetimes/: Cargo.toml
25-lifetimes/src/: main.rs
26-structs_elision/: Cargo.toml
26-structs_elision/src/: main.rs
27-box_smart_pointer/src/: main.rs
28-rc_smart_pointer/src/: main.rs
29-refcell_smart_pointer/src/: main.rs
30-deref_coercion/: Cargo.toml
30-deref_coercion/src/: main.rs
31-panic/src/: main.rs
32-result/src/: main.rs
33-propagating_errors/src/: main.rs
34-result_and_option_convertions/: Cargo.toml
34-result_and_option_convertions/src/: main.rs
35-multiple_error_types/: Cargo.toml
35-multiple_error_types/src/: main.rs
36-error_handling/: Cargo.toml
36-error_handling/src/: main.rs
37-error_handling_libraries/: Cargo.toml
37-error_handling_libraries/src/: main.rs
38-error_stack/: Cargo.toml
38-error_stack/src/: main.rs
39-closures/src/: main.rs
40-iterator_pattern/src/: main.rs
41-combinators/src/: main.rs
42-creating_threads/src/: main.rs
43-async_with_tokio/: Cargo.toml
43-async_with_tokio/src/: main.rs
45-procedural_macros/: Cargo.toml
45-procedural_macros/src/: lib.rs  main.rs
(+11 files in other folders)
