[package]
name = "procedural_macros"
version = "0.1.0"
edition = "2021"

[lib]
# it links a macro provided by the compiler "called "proc_macro" with this macro
# it provides all the tools needed to build a procedural macro
proc-macro = true

[dependencies]
quote = "1.0" # turns syntax tree data structures (Rust code) into tokens of source code
chrono = "0.4"
syn = "2.0" # parses s stream of Rust tokens into a syntax tree of source code